tests/files/lexer_tests/should_fail/031.cmdr
// Illegal character in string (ascii 31)
var = '';